# chromophile_dev

./: .readthedocs.yaml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
docs/: requirements.in  requirements.txt
docs/source/: conf.py  index.rst  refs.bib
docs/source/_static/: table.css
docs/source/design/: approximation.rst  caveats.rst  chromophile.rst  implementation.rst  introduction.rst  uniformity.rst
docs/source/user_guide/: api.rst  getting_started.rst  list_of_color_maps.rst
src/chromophile_dev/: cmap.py  cmdline.py  conversion.py  db.py  display.py  fmt.py  make_dist.py  opt.py  run.py  search.py  show.py
src/chromophile_dev/data/: cp_cyc_isolum.json  cp_cyc_isolum_wide.json  cp_cyc_red_cyan_valley.json  cp_div_blue_orange_valley.json  cp_div_green_blue_hill.json  cp_div_green_cyan_valley.json  cp_div_orange_blue_hill.json  cp_div_pink_orange_valley.json  cp_isolum_purple_orange.json  cp_isolum_purple_orange_wide.json  cp_isolum_yellow_blue.json  cp_isolum_yellow_blue_wide.json  cp_mseq_green_blue.json  cp_mseq_green_purple.json  cp_mseq_green_red.json  cp_mseq_orange_blue.json  cp_mseq_orange_blue_purple.json  cp_mseq_orange_green_blue.json  cp_mseq_orange_green_blue_purple.json  cp_mseq_orange_teal.json  cp_mseq_purple_orange.json  cp_mseq_red_blue.json  cp_mseq_teal_purple.json  cp_seq_blue_cyan_ccw.json  cp_seq_blue_cyan_cw.json  cp_seq_blue_pink_ccw1.json  cp_seq_blue_pink_ccw2.json  cp_seq_blue_yellow_ccw.json  cp_seq_blue_yellow_cw.json  cp_seq_gray.json  cp_seq_green_cyan_ccw.json  cp_seq_green_green_cw.json  (+7 more)
(+8 files in other folders)
