[metadata]
name = chromophile_dev

[options]
include_package_data = True
install_requires = 
	Sphinx >= 4.5.0
	click >= 8.0
	colour-science >= 0.3.16
	matplotlib >= 3.4
	numpy >= 1.22
	platformdirs >= 2.0
	scipy >= 1.8
        networkx >= 2.8

[options.entry_points]
console_scripts = 
	cp_search=chromophile_dev.cmdline:cmd_search
	cp_edit=chromophile_dev.cmdline:cmd_edit
	cp_print=chromophile_dev.cmdline:cmd_print
	cp_create=chromophile_dev.cmdline:cmd_create
	cp_make_dist=chromophile_dev.cmdline:cmd_make_dist
	cp_show=chromophile_dev.show:show
	cp_colorspace=chromophile_dev.cmdline:cmd_colorspace
	cp_colormap=chromophile_dev.cmdline:cmd_colormap
